// Vitest Snapshot v1

exports[`Link > Link baseVue demo works fine 1`] = `
<t-space>
  <t-link
    theme="primary"
  >
    跳转链接
  </t-link>
</t-space>
`;

exports[`Link > Link disabledVue demo works fine 1`] = `
<t-space>
  <t-link
    disabled=""
    theme="default"
  >
     跳转链接 
  </t-link>
  <t-link
    disabled=""
    theme="primary"
    underline=""
  >
     跳转链接 
  </t-link>
  <t-link
    disabled=""
    hover="color"
    theme="danger"
  >
     跳转链接 
  </t-link>
  <t-link
    disabled=""
    hover="underline"
    onclick="function () { [native code] }"
    theme="warning"
  >
     跳转链接 
  </t-link>
  <t-link
    disabled=""
    theme="success"
  >
    <svg
      class="t-icon t-icon-jump"
      fill="none"
      height="1em"
      slot="suffixIcon"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M2.3 13.7a1 1 0 00.7.3h10a1 1 0 001-1V8.5h-1V13H3V3h4.5V2H3a1 1 0 00-1 1v10c0 .27.1.52.3.7z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M9 3V2h4.5c.28 0 .5.22.5.5V7h-1V3.7L8.7 8 8 7.3 12.3 3H9z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
     跳转链接 
  </t-link>
</t-space>
`;

exports[`Link > Link hoverVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space>
    <t-link
      hover="underline"
      theme="default"
    >
       跳转链接 
    </t-link>
    <t-link
      hover="underline"
      theme="primary"
    >
       跳转链接 
    </t-link>
    <t-link
      hover="underline"
      theme="danger"
    >
       跳转链接 
    </t-link>
    <t-link
      hover="underline"
      theme="warning"
    >
       跳转链接 
    </t-link>
    <t-link
      hover="underline"
      theme="success"
    >
       跳转链接 
    </t-link>
  </t-space>
  <t-space>
    <t-link
      hover="color"
      theme="default"
    >
       跳转链接 
    </t-link>
    <t-link
      hover="color"
      theme="primary"
    >
       跳转链接 
    </t-link>
    <t-link
      hover="color"
      theme="danger"
    >
       跳转链接 
    </t-link>
    <t-link
      hover="color"
      theme="warning"
    >
       跳转链接 
    </t-link>
    <t-link
      hover="color"
      theme="success"
    >
       跳转链接 
    </t-link>
  </t-space>
  <t-space>
    <t-link
      hover="color"
      theme="default"
      underline=""
    >
       跳转链接 
    </t-link>
    <t-link
      hover="color"
      theme="primary"
      underline=""
    >
       跳转链接 
    </t-link>
    <t-link
      hover="color"
      theme="danger"
      underline=""
    >
       跳转链接 
    </t-link>
    <t-link
      hover="color"
      theme="warning"
      underline=""
    >
       跳转链接 
    </t-link>
    <t-link
      hover="color"
      theme="success"
      underline=""
    >
       跳转链接 
    </t-link>
  </t-space>
</t-space>
`;

exports[`Link > Link iconVue demo works fine 1`] = `
<t-space>
  <t-link
    onclick="function () { [native code] }"
    prefix-icon="() => h(__vite_ssr_import_0__.LinkIcon)"
    theme="default"
  >
     跳转链接 
  </t-link>
  <t-link
    href="https://tdesign.tencent.com/"
    target="_self"
    theme="primary"
    underline=""
  >
    <svg
      class="t-icon t-icon-link"
      fill="none"
      height="1em"
      slot="prefix-icon"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.23 11.89l2.12-2.12.71.7-2.12 2.13A2.5 2.5 0 013.4 9.06l2.13-2.12.7.7-2.12 2.13a1.5 1.5 0 002.12 2.12zM10.47 9.06l-.7-.7 2.12-2.13a1.5 1.5 0 10-2.12-2.12L7.65 6.23l-.71-.7L9.06 3.4a2.5 2.5 0 013.54 3.54l-2.13 2.12z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M9.06 6.23L6.23 9.06l.71.7 2.83-2.82-.7-.7z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
     跳转链接 
  </t-link>
  <t-link
    hover="color"
    href="https://tdesign.tencent.com/"
    target="_blank"
    theme="danger"
  >
    <svg
      class="t-icon t-icon-jump"
      fill="none"
      height="1em"
      slot="suffixIcon"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M2.3 13.7a1 1 0 00.7.3h10a1 1 0 001-1V8.5h-1V13H3V3h4.5V2H3a1 1 0 00-1 1v10c0 .27.1.52.3.7z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M9 3V2h4.5c.28 0 .5.22.5.5V7h-1V3.7L8.7 8 8 7.3 12.3 3H9z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
     跳转链接 
  </t-link>
  <t-link
    disabled=""
    suffixicon="() => h(__vite_ssr_import_0__.JumpIcon)"
    theme="warning"
  >
     跳转链接 
  </t-link>
</t-space>
`;

exports[`Link > Link sizeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space>
    <t-link
      size="small"
      theme="default"
    >
       跳转链接 
    </t-link>
    <t-link
      size="small"
      theme="primary"
    >
       跳转链接 
    </t-link>
    <t-link
      size="small"
      theme="danger"
    >
       跳转链接 
    </t-link>
    <t-link
      disabled=""
      size="small"
      theme="warning"
    >
      跳转链接
    </t-link>
    <t-link
      size="small"
      theme="success"
    >
      <svg
        class="t-icon t-icon-jump"
        fill="none"
        height="1em"
        slot="suffix-icon"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2.3 13.7a1 1 0 00.7.3h10a1 1 0 001-1V8.5h-1V13H3V3h4.5V2H3a1 1 0 00-1 1v10c0 .27.1.52.3.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M9 3V2h4.5c.28 0 .5.22.5.5V7h-1V3.7L8.7 8 8 7.3 12.3 3H9z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
       跳转链接 
    </t-link>
  </t-space>
  <t-space>
    <t-link
      size="medium"
      theme="default"
    >
       跳转链接 
    </t-link>
    <t-link
      size="medium"
      theme="primary"
    >
       跳转链接 
    </t-link>
    <t-link
      size="medium"
      theme="danger"
    >
       跳转链接 
    </t-link>
    <t-link
      disabled=""
      size="medium"
      theme="warning"
    >
      跳转链接
    </t-link>
    <t-link
      size="medium"
      theme="success"
    >
      <svg
        class="t-icon t-icon-jump"
        fill="none"
        height="1em"
        slot="suffix-icon"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2.3 13.7a1 1 0 00.7.3h10a1 1 0 001-1V8.5h-1V13H3V3h4.5V2H3a1 1 0 00-1 1v10c0 .27.1.52.3.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M9 3V2h4.5c.28 0 .5.22.5.5V7h-1V3.7L8.7 8 8 7.3 12.3 3H9z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
       跳转链接 
    </t-link>
  </t-space>
  <t-space>
    <t-link
      size="large"
      theme="default"
    >
       跳转链接 
    </t-link>
    <t-link
      size="large"
      theme="primary"
    >
       跳转链接 
    </t-link>
    <t-link
      size="large"
      theme="danger"
    >
       跳转链接 
    </t-link>
    <t-link
      disabled=""
      size="large"
      theme="warning"
    >
      跳转链接
    </t-link>
    <t-link
      size="large"
      theme="success"
    >
      <svg
        class="t-icon t-icon-jump"
        fill="none"
        height="1em"
        slot="suffix-icon"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2.3 13.7a1 1 0 00.7.3h10a1 1 0 001-1V8.5h-1V13H3V3h4.5V2H3a1 1 0 00-1 1v10c0 .27.1.52.3.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M9 3V2h4.5c.28 0 .5.22.5.5V7h-1V3.7L8.7 8 8 7.3 12.3 3H9z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
       跳转链接 
    </t-link>
  </t-space>
</t-space>
`;

exports[`Link > Link themeVue demo works fine 1`] = `
<t-space>
  <t-link
    theme="default"
  >
     跳转链接 
  </t-link>
  <t-link
    theme="primary"
  >
     跳转链接 
  </t-link>
  <t-link
    theme="danger"
  >
     跳转链接 
  </t-link>
  <t-link
    theme="warning"
  >
     跳转链接 
  </t-link>
  <t-link
    theme="success"
  >
     跳转链接 
  </t-link>
</t-space>
`;

exports[`Link > Link underlineVue demo works fine 1`] = `
<t-space>
  <t-link
    theme="default"
    underline=""
  >
     跳转链接 
  </t-link>
  <t-link
    theme="primary"
    underline=""
  >
     跳转链接 
  </t-link>
  <t-link
    theme="danger"
    underline=""
  >
     跳转链接 
  </t-link>
  <t-link
    theme="warning"
    underline=""
  >
     跳转链接 
  </t-link>
  <t-link
    theme="success"
    underline=""
  >
     跳转链接 
  </t-link>
</t-space>
`;
